fix: rename to tailwind

--- a/src/components/Home/StarterKits.astro
+++ b/src/components/Home/StarterKits.astro
@@ -1,7 +1,7 @@
 ---
 import PhArrowRight from '~icons/ph/arrow-right';
 import PhFeather from '~icons/ph/feather-bold';
-import LogoWhite from '@assets/logo-w.svg';
+import TailwindLogo from '~icons/vscode-icons/file-type-tailwind';
 ---
 
 <section>
@@ -42,8 +42,8 @@ import LogoWhite from '@assets/logo-w.svg';
 
     <a href="#starter-kits" class="card in-progress">
       <h3 class="heading-grad">
-        <img src={LogoWhite.src} class="logo" />
-        Atma
+        <TailwindLogo class="logo" />
+        Tailwind
       </h3>
 
       <p class="description">
