--- a/src/components/Repl/srcdoc.html
+++ b/src/components/Repl/srcdoc.html
@@ -19,8 +19,9 @@
       body {
         margin: 0;
         box-sizing: border-box;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-          Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family:
+          -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+          Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         height: var(--height);
         width: 100%;
         background: linear-gradient(to right, rgb(16 185 129), rgb(5 150 105));
@@ -50,21 +51,31 @@
           0 8px 10px -6px rgb(0 0 0 / 0.1);
       }
 
-      button {
-        cursor: pointer;
+      button + button {
+        margin-left: 0.5rem;
       }
 
-      button[type='submit'] {
+      form > button {
+        cursor: pointer;
         border-radius: 0.25rem;
-        background-color: rgb(5, 150, 105);
+        background-color: rgb(209 213 219);
         padding: 0.5rem 1rem;
         font-weight: 500;
-        color: white;
+        color: #000;
         border: none;
         margin-top: 1rem;
 
         &:hover {
-          background-color: rgb(6 95 70);
+          background-color: rgb(156 163 175);
+        }
+
+        &[type='submit'] {
+          background-color: rgb(5, 150, 105);
+          color: white;
+
+          &:hover {
+            background-color: rgb(6 95 70);
+          }
         }
       }
     </style>
