--- a/src/components/Home/BringYourOwnStyles.astro
+++ b/src/components/Home/BringYourOwnStyles.astro
@@ -99,6 +99,8 @@ import SwitchOpenPropsCode from '@components/Home/SwitchOpenProps.vue?raw';
 </section>
 
 <style>
+  @reference '@inject-css';
+
   section {
     background: radial-gradient(
       closest-corner,
