--- a/src/components/Home/InternationalReady.astro
+++ b/src/components/Home/InternationalReady.astro
@@ -30,6 +30,8 @@ import I18nDemo from '@components/Home/I18nDemo.vue';
 </section>
 
 <style>
+  @reference '@inject-css';
+
   section {
     background: radial-gradient(
       closest-corner,
