--- a/src/components/Home/ManagingForms.astro
+++ b/src/components/Home/ManagingForms.astro
@@ -93,6 +93,8 @@ import ArktypeFormCode from './ArktypeForm.vue?raw';
 </section>
 
 <style>
+  @reference '@inject-css';
+
   section {
     background: radial-gradient(
       closest-corner,
