--- a/src/components/Home/SocialLinks.astro
+++ b/src/components/Home/SocialLinks.astro
@@ -71,6 +71,8 @@
 </div>
 
 <style>
+  @reference '@inject-css';
+
   svg {
     @apply size-8 fill-current text-zinc-400 transition-colors duration-200 hover:text-zinc-100;
   }
