--- a/src/components/Home/BuiltInInteractions.astro
+++ b/src/components/Home/BuiltInInteractions.astro
@@ -20,6 +20,8 @@ import SelectKeyboardDemo from './SelectKeyboardDemo.vue';
 </section>
 
 <style>
+  @reference '@inject-css';
+
   section {
     background: radial-gradient(
       closest-corner,
