--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,6 +23,10 @@
   --color-accent-950: '#064e3b';
 }
 
+* {
+  @apply box-border;
+}
+
 :root {
   --sl-text-h3: var(--sl-text-2xl);
   --sl-text-h4: var(--sl-text-xl);
